--- a/public/CSS/Header.css
+++ b/public/CSS/Header.css
@@ -244,6 +244,7 @@ header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin {
   left: calc(50vw - 400px / 2);
   top: 15vh;
   display: none;
+  overflow-y: scroll;
 }
 label[for=show]{
   cursor: pointer;
@@ -288,7 +289,7 @@ header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div
   margin: 30px  15px  0 15px;
   text-align: right;
   font-size: 16px;
-  color: aqua;
+  color: var(--numbers-color);
   border-bottom: unset;
 }
 header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div.city-list:nth-of-type(3){
@@ -299,6 +300,22 @@ header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div
   box-sizing: border-box;
   font-size: 15px;
   border-bottom: 2px solid var(--searchbar-color);
+}header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div.city-list:nth-of-type(2)>svg{
+  fill: var(--numbers-color);
+  position: absolute;
+  vertical-align: middle;
+  left: 91%;
+}
+header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div.city-list:nth-of-type(2){
+  padding-right: 30px;
+  box-sizing: border-box;
+}
+header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div.city-list>svg{
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  vertical-align: middle;
+  left: 10px;
 }
 header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div.city-list{
   display: block;
@@ -308,6 +325,7 @@ header > div.headerbottom > div.bb > div.city > div.city-name > div.city-pin>div
   box-sizing: border-box;
   font-size: 17px;
   border-bottom: 2px solid var(--searchbar-color);
+  cursor: pointer;
 }
 /* end city-pin */
 
