--- a/public/CSS/Main.css
+++ b/public/CSS/Main.css
@@ -19,3 +19,5 @@
 @import "./toys-tools.css";
 @import "./reading.css";
 @import "./join-page.css";
+@import "./best-seller.css";
+@import "./support.css";
