--- a/public/CSS/wonderslider.css
+++ b/public/CSS/wonderslider.css
@@ -48,6 +48,7 @@ div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>
 }
 div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a{
     padding: 12px 16px;
+    text-decoration: none;
 }
 div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>img{
     object-fit: cover;
@@ -59,4 +60,42 @@ div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>
     width: 150px;
     height: 64px;
     margin: 10px auto;
+    text-align: left;
+}
+div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>div.wonderprice>div.fullprice{
+    font-family: Yekan;
+}
+div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>div.wonderprice>div.fullprice>div.price{
+    text-decoration: none;
+    color: var(--web-text-color);
+    display: inline-block;
+    font-size: 14px;
+    font-weight: bold;
+}
+div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>div.wonderprice>div.fullprice>div.buttom{
+    width: 40px;
+    height: 20px;
+    background-color: var(--digi-red-color);
+    color: var(--web-text-color);
+    display: inline-block;
+    text-align: center;
+    margin-left: 20px;
+    border-radius: 20px;
+    color: white;
+    font-size: 12px;
+    line-height: 20px;
+}
+div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>div.wonderprice>div.fullprice>div.price>svg{
+    width: 18px;
+    height: 18px;
+    vertical-align: middle;
+}
+div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>div.wonderprice>div.discount{
+    margin-top: 10px;
+    margin-left: 25px;
+    font-family: Yekan;
+}
+div.wonderslider>div.subslider>div.swiper>div.swiper-wrapper>div.swiper-slide>a>div.wonderprice>div.discount>del{
+    color: var(--discount-color);
+    font-size: 12px;
 }
